kubernetes/components/networkpolicies/gateway/allow-everyone-external-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-everyone-external-gateway
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: external
  ingress:
    - fromCIDR:
        - 0.0.0.0/0
