kubernetes/components/networkpolicies/gateway/allow-home-internal-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-home-internal-gateway
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: internal
  ingress:
    - fromCIDR:
        - 192.168.10.0/24
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: envoy-gateway
