kubernetes/components/networkpolicies/gateway/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
